[package]
name = "FileSorterX"
version = "1.1.0"
edition = "2021"
authors = ["Xanthus58 <Xanthus58@protonmail.com>"]
description = "FileSorterX is an automatic file sorting application that sorts your files into folders based on their file extension. With FileSorterX, you can easily keep your files organized and find what you need quickly."
repository = "https://github.com/Xanthus58/FileSorterX"
license = "MIT"
readme = "README.md"
keywords = ["file", "sort", "automatic", "extension"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.1.13", features = ["derive"] }
self_update = "0.36.0"
rand = "0.8.5"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

#Cross targets | Command: cross build --release --target <target>
#x86_64-unknown-linux-gnu
#x86_64-pc-windows-msvc
#x86_64-unknown-freebsd