[package]
name = "FileSorterX"
version = "1.2.1"
edition = "2021"
authors = ["Xanthus58 <Xanthus58@protonmail.com>"]
description = "FileSorterX is an automatic file sorting application that sorts your files into folders based on their file extension. With FileSorterX, you can easily keep your files organized and find what you need quickly."
repository = "https://github.com/Xanthus58/FileSorterX"
license = "MIT"
readme = "README.md"
keywords = ["file", "sort", "automatic", "extension"]
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
self_update = "0.36.0"
rand = "0.8.5"
dotenv_codegen = "0.15.0"
uuid = { version = "1.3.0", features = ["v4", "fast-rng", "macro-diagnostics"] }

[profile.release]
opt-level = 3
debug = false
panic = "abort"
codegen-units = 16
lto = true
incremental = false

#Cross targets | Command: cross build --release --target <target>
#x86_64-unknown-linux-gnu
#x86_64-pc-windows-msvc
#x86_64-unknown-freebsd
